update teacher cards & descriptions on the certification page

--- a/certifications/aerial-yoga-100.html
+++ b/certifications/aerial-yoga-100.html
@@ -389,25 +389,7 @@
                 </div>
 
                 <div class="cert-instructors-grid">
-                    <!-- Instructor 1: Harjeet -->
-                    <div class="instructor-card">
-                        <div class="instructor-photo">
-                            <img srcset="/assets/photos/certifications/harjeet-200.webp 200w,
-                                         /assets/photos/certifications/harjeet-300.webp 300w,
-                                         /assets/photos/certifications/harjeet-600.webp 600w"
-                                 sizes="(max-width: 767px) 150px, 200px"
-                                 src="/assets/photos/certifications/harjeet-200.webp"
-                                 alt="Harjeet - Kundalini Yoga Teacher"
-                                 loading="lazy">
-                        </div>
-                        <div class="instructor-info">
-                            <h3 data-i18n="about:teachers.teacher1.name">Harjeet</h3>
-                            <p class="instructor-specialty" data-i18n="about:teachers.teacher1.specialty">Kundalini Yoga</p>
-                            <p class="instructor-bio" data-i18n="about:teachers.teacher1.bio">Harjeet is an experienced, KRI certified Kundalini Yoga teacher who specializes in yoga philosophy and spiritual growth. His classes are highly valued by students for their depth and variety. He radiates a sense of calm and peace; he will help you heal, grow and transform.</p>
-                        </div>
-                    </div>
-
-                    <!-- Instructor 2: Camila -->
+                    <!-- Instructor 1: Camila (Lead Trainer) -->
                     <div class="instructor-card">
                         <div class="instructor-photo">
                             <img srcset="/assets/photos/certifications/camila-200.webp 200w,
@@ -415,13 +397,31 @@
                                          /assets/photos/certifications/camila-600.webp 600w"
                                  sizes="(max-width: 767px) 150px, 200px"
                                  src="/assets/photos/certifications/camila-200.webp"
-                                 alt="Camila - Vinyasa & Aerial Yoga Teacher"
+                                 alt="Camila - Lead Trainer"
                                  loading="lazy">
                         </div>
                         <div class="instructor-info">
-                            <h3 data-i18n="about:teachers.teacher2.name">Camila</h3>
-                            <p class="instructor-specialty" data-i18n="about:teachers.teacher2.specialty">Vinyasa & Aerial Yoga</p>
-                            <p class="instructor-bio" data-i18n="about:teachers.teacher2.bio">Camila is a passionate Aerial and Vinyasa Yoga teacher with a deep love for the practice. Her expert body alignment knowledge will help you take your practice to the next level, enabling you to achieve postures you previously thought impossible.</p>
+                            <h3 data-i18n="certifications:instructors.camila.name">Camila</h3>
+                            <p class="instructor-specialty" data-i18n="certifications:instructors.camila.role">Lead Trainer</p>
+                            <p class="instructor-bio" data-i18n="certifications:instructors.camila.bio">Camila is a passionate Aerial and Vinyasa Yoga teacher who serves as the lead trainer for our Aerial Yoga Teacher Training program. With deep expertise in body alignment and aerial technique, she guides students through the practical aspects of the certification—from foundational poses to advanced sequences. Her patient teaching style and technical precision will help you master the art of aerial yoga.</p>
+                        </div>
+                    </div>
+
+                    <!-- Instructor 2: Harjeet (Supporting Trainer) -->
+                    <div class="instructor-card">
+                        <div class="instructor-photo">
+                            <img srcset="/assets/photos/certifications/harjeet-200.webp 200w,
+                                         /assets/photos/certifications/harjeet-300.webp 300w,
+                                         /assets/photos/certifications/harjeet-600.webp 600w"
+                                 sizes="(max-width: 767px) 150px, 200px"
+                                 src="/assets/photos/certifications/harjeet-200.webp"
+                                 alt="Harjeet - Supporting Trainer"
+                                 loading="lazy">
+                        </div>
+                        <div class="instructor-info">
+                            <h3 data-i18n="certifications:instructors.harjeet.name">Harjeet</h3>
+                            <p class="instructor-specialty" data-i18n="certifications:instructors.harjeet.role">Supporting Trainer</p>
+                            <p class="instructor-bio" data-i18n="certifications:instructors.harjeet.bio">Harjeet is an experienced, KRI certified Kundalini Yoga teacher who serves as the supporting trainer for the Aerial Yoga Teacher Training. He leads the program's theoretical modules, covering yogic philosophy, pranayama, mantra, and meditation practices. His depth of knowledge and calm presence create a foundation for understanding the spiritual dimensions of the practice.</p>
                         </div>
                     </div>
                 </div>
