--- a/es/certifications/aerial-yoga-100.html
+++ b/es/certifications/aerial-yoga-100.html
@@ -389,25 +389,7 @@
                 </div>
 
                 <div class="cert-instructors-grid">
-                    <!-- Instructor 1: Harjeet -->
-                    <div class="instructor-card">
-                        <div class="instructor-photo">
-                            <img srcset="/assets/photos/certifications/harjeet-200.webp 200w,
-                                         /assets/photos/certifications/harjeet-300.webp 300w,
-                                         /assets/photos/certifications/harjeet-600.webp 600w"
-                                 sizes="(max-width: 767px) 150px, 200px"
-                                 src="/assets/photos/certifications/harjeet-200.webp"
-                                 alt="Harjeet - Kundalini Yoga Teacher"
-                                 loading="lazy">
-                        </div>
-                        <div class="instructor-info">
-                            <h3>Harjeet</h3>
-                            <p class="instructor-specialty">Kundalini Yoga</p>
-                            <p class="instructor-bio">Harjeet es un maestro experimentado de Kundalini Yoga certificado por KRI que se especializa en filosofía de yoga y crecimiento espiritual. Sus clases son altamente valoradas por los estudiantes por su profundidad y variedad. Irradia una sensación de calma y paz; te ayudará a sanar, crecer y transformarte.</p>
-                        </div>
-                    </div>
-
-                    <!-- Instructor 2: Camila -->
+                    <!-- Instructor 1: Camila (Lead Trainer) -->
                     <div class="instructor-card">
                         <div class="instructor-photo">
                             <img srcset="/assets/photos/certifications/camila-200.webp 200w,
@@ -415,13 +397,31 @@
                                          /assets/photos/certifications/camila-600.webp 600w"
                                  sizes="(max-width: 767px) 150px, 200px"
                                  src="/assets/photos/certifications/camila-200.webp"
-                                 alt="Camila - Vinyasa & Aerial Yoga Teacher"
+                                 alt="Camila - Lead Trainer"
                                  loading="lazy">
                         </div>
                         <div class="instructor-info">
                             <h3>Camila</h3>
-                            <p class="instructor-specialty">Vinyasa y Yoga Aéreo</p>
-                            <p class="instructor-bio">Camila es una apasionada maestra de Yoga Aéreo y Vinyasa con un profundo amor por la práctica. Su conocimiento experto de alineación corporal te ayudará a llevar tu práctica al siguiente nivel, permitiéndote lograr posturas que antes pensabas imposibles.</p>
+                            <p class="instructor-specialty">Entrenadora Principal</p>
+                            <p class="instructor-bio">Camila es una apasionada maestra de Yoga Aéreo y Vinyasa que funge como entrenadora principal de nuestro programa de Certificación de Yoga Aéreo. Con profunda experiencia en alineación corporal y técnica aérea, guía a los estudiantes a través de los aspectos prácticos de la certificación—desde posturas fundamentales hasta secuencias avanzadas. Su estilo de enseñanza paciente y precisión técnica te ayudarán a dominar el arte del yoga aéreo.</p>
+                        </div>
+                    </div>
+
+                    <!-- Instructor 2: Harjeet (Supporting Trainer) -->
+                    <div class="instructor-card">
+                        <div class="instructor-photo">
+                            <img srcset="/assets/photos/certifications/harjeet-200.webp 200w,
+                                         /assets/photos/certifications/harjeet-300.webp 300w,
+                                         /assets/photos/certifications/harjeet-600.webp 600w"
+                                 sizes="(max-width: 767px) 150px, 200px"
+                                 src="/assets/photos/certifications/harjeet-200.webp"
+                                 alt="Harjeet - Supporting Trainer"
+                                 loading="lazy">
+                        </div>
+                        <div class="instructor-info">
+                            <h3>Harjeet</h3>
+                            <p class="instructor-specialty">Entrenador de Apoyo</p>
+                            <p class="instructor-bio">Harjeet es un maestro experimentado de Kundalini Yoga certificado por KRI que funge como entrenador de apoyo para la Certificación de Yoga Aéreo. Él dirige los módulos teóricos del programa, cubriendo filosofía yóguica, pranayama, mantra y prácticas de meditación. Su profundidad de conocimiento y presencia tranquila crean una base para comprender las dimensiones espirituales de la práctica.</p>
                         </div>
                     </div>
                 </div>
